Bug 158044 - RTF import paragraph style attribute handling wrong
Summary: RTF import paragraph style attribute handling wrong
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.4 target:24....
Keywords:
: 152874 154370 (view as bug list)
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2023-11-02 14:43 UTC by Oliver Specht (CIB)
Modified: 2024-02-16 00:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Butdoc with description (42.38 KB, application/msword)
2023-11-02 14:43 UTC, Oliver Specht (CIB)
Details
The example file in Word and Writer master (115.85 KB, image/png)
2023-11-06 13:53 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2023-11-02 14:43:17 UTC
Created attachment 190617 [details]
Butdoc with description

In RTF format paragraph style attributes need to be repeated at the paragraph.
If the properties are not repeated then the actual paragraph has to use the default values.

RTF created in Word or Libre Office do not create such documents but some third party tools do that. 


In the attached bugdoc it is shown with some of the properties (left+right indent, tab stops, alignment

The second paragraph has none of the mentioned attributes repeated.
In Word it is left aligned, has no indents and no tab stops.
In LibreOffice it is centered, and tab stops but surprisingly no indents (Version 7.4.5.1)
Comment 1 Gabor Kelemen (Collabora) 2023-11-06 13:53:46 UTC
Created attachment 190682 [details]
The example file in Word and Writer master

Confirming in 

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 026be6f62f183f14b9c0bf2e50cde9ac69856f53
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2023-11-10 21:30:26 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fce18155052821756466ea043c638f4ed72f41d6

tdf#158044 handling of paragraph attributes in RTF import

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-11-11 19:55:22 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/d06bb71d19c29eaecdf499cb5e160f2ce08b58de

tdf#158044 handling of paragraph attributes in RTF import

It will be available in 7.6.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2023-11-12 20:15:14 UTC
Verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 50add2043752c7b07beccef9a509bea6c09619f8
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Document now looks like in Word.
Comment 5 Gabor Kelemen (Collabora) 2023-12-01 14:43:58 UTC
*** Bug 152874 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2023-12-19 19:53:47 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9e127010a86b3521c803ac86c0b5f58dc8e2966b

tdf#158044 writerfilter: handle toggle properties in import/export

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-12-21 15:03:32 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b6c4dd27acdd08fa63f8d75dd09212828e28844f

tdf#158044 writerfilter: handle toggle properties in import/export

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-01-15 17:10:06 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/70386cd81f8c6e14014cf3cd50ecd6a987c12985

tdf#158830 fixes regression introduces with tdf#158044

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-01-15 20:40:27 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b65a2bc14c1553846bd0f4910951a0a964b3cde5

tdf#158830 fixes regression introduces with tdf#158044

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Gabor Kelemen (Collabora) 2024-01-22 11:59:46 UTC
*** Bug 154370 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2024-01-25 13:27:55 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-0":

https://git.libreoffice.org/core/commit/ebee4f6a811ff5e9b0d9d4ae21e349ae3b0cdfdd

tdf#158830 fixes regression introduces with tdf#158044

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-02-16 00:28:07 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/660f366a78ffcad429458acc429e0579d1af5495

tdf#158044 writerfilter: handle toggle properties in import/export

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.