tdf#158044 handling of paragraph attributes in RTF import

style attributes need to be repeated at the paragraph
if not repeated then defaults have to be applied

This includes:
  Fix Windows 64-bit build using VS 2022

  Change-Id: Id976fe515287a4aa12d7ff8ca0ca09c31c65309f
  Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159316

and
  Make the unit test linear and more explicit

  Change-Id: Ic28d059ed41f88c9264743034a5ce5397fff0b2c
  Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159317

Change-Id: I4ee567e8006c240c046b7e7bb75eae92e5563776
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158839
Tested-by: Jenkins
Co-authored-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159328