sw/qa/extras/rtfimport/rtfimport.cxx
@@ -1712,6 +1712,53 @@ CPPUNIT_TEST_FIXTURE(Test, testParaStyleBottomMargin)
                          getProperty<style::LineSpacing>(xPara, "ParaLineSpacing").Height);
 }
 
+CPPUNIT_TEST_FIXTURE(Test, test158044Tdf)
+{
+    createSwDoc("tdf158044.rtf");
+
+    uno::Reference<text::XTextDocument> xTextDocument(mxComponent, uno::UNO_QUERY);
+    uno::Reference<container::XEnumerationAccess> xParaEnumAccess(xTextDocument->getText(),
+                                                                  uno::UNO_QUERY);
+    uno::Reference<container::XEnumeration> xParaEnum = xParaEnumAccess->createEnumeration();
+    int paraIndex = 0;
+    while (xParaEnum->hasMoreElements())
+    {
+        uno::Reference<beans::XPropertySet> xPropertySet(xParaEnum->nextElement(), uno::UNO_QUERY);
+        sal_Int16 adjust = getProperty<sal_Int16>(xPropertySet, "ParaAdjust");
+        Color fillColor = getProperty<Color>(xPropertySet, "FillColor");
+        drawing::FillStyle fillStyle = getProperty<drawing::FillStyle>(xPropertySet, "FillStyle");
+        uno::Sequence<style::TabStop> tabStops
+            = getProperty<uno::Sequence<style::TabStop>>(xPropertySet, "ParaTabStops");
+        switch (paraIndex)
+        {
+            case 0:
+                CPPUNIT_ASSERT_EQUAL(sal_Int32(0), tabStops.getLength());
+                break;
+            case 1:
+                CPPUNIT_ASSERT_EQUAL(drawing::FillStyle_NONE, fillStyle);
+                CPPUNIT_ASSERT(0xffffff == fillColor);
+                break;
+            case 2:
+                CPPUNIT_ASSERT_EQUAL(sal_Int16(0), adjust);
+                break;
+            case 3:
+                CPPUNIT_ASSERT_EQUAL(sal_Int32(2), tabStops.getLength());
+                break;
+            case 4:
+                CPPUNIT_ASSERT(tabStops.getLength() < 2);
+                CPPUNIT_ASSERT_EQUAL(drawing::FillStyle_SOLID, fillStyle);
+                CPPUNIT_ASSERT(0xff0000 == fillColor);
+                break;
+            case 5:
+                CPPUNIT_ASSERT(tabStops.getLength() < 2);
+                CPPUNIT_ASSERT_EQUAL(drawing::FillStyle_NONE, fillStyle);
+                break;
+            default:
+                break;
+        }
+        ++paraIndex;
+    }
+}
 // tests should only be added to rtfIMPORT *if* they fail round-tripping in rtfEXPORT
 
 CPPUNIT_PLUGIN_IMPLEMENT();
